# dpp

./: .env  .gitignore  app.py  pyproject.toml
configs/: settings.py
prompts/: Socrático-Freiriano.txt  Socrático.txt  Tradicional.txt  freiriano.txt  socratico.txt
utils/: analise.py  ia.py  prompts.py  render.py  session.py  storage.py  teste_gsheets.py
