[project]
name = "dpp"
version = "0.1.0"
description = "Tutor socrático com IA para TCC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.3.0",
    "google-generativeai>=0.8.6",
    "gspread>=6.2.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "oauth2client>=4.1.3",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "streamlit-extras>=1.6.0",
    "streamlit-option-menu>=0.4.0",
]
